--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="userName">
           <h2 class="name">@Username</h2>
-          <p>Msquare fullstack developer course flexbox lesson</p>
+          <p>MMSIT frontend developer course lesson</p>
         </div>
       </div>
     </div>
